--- a/index.html
+++ b/index.html
@@ -1,38 +1,12 @@
-<!DOCTYPE html>
-<html lang="id">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f0f0f0; /* Warna latar belakang */
-            overflow: hidden; /* Menghilangkan scrollbar */
-            margin: 0;
-            padding: 20px;
-        }
-
-        .marquee {
-            position: absolute;
-            white-space: nowrap; /* Mencegah teks terputus */
-            font-weight: bold; /* Teks tebal */
-            color: black; /* Warna teks hitam */
-            font-size: 24px; /* Ukuran font */
-            animation: scroll 10s linear infinite; /* Animasi */
-        }
-
-        @keyframes scroll {
-            0% {
-                transform: translateX(100%); /* Mulai dari luar kanan */
-            }
-            100% {
-                transform: translateX(-100%); /* Berhenti di luar kiri */
-            }
-        }
-    </style>
-</head>
-<body>
-    <div class="marquee">NURUT AJA INI MONYET 😂 </div>
-</body>
+<html>
+ <head>
+  <title>
+   Bear Drawing
+  </title>
+  <script src="https://cdn.tailwindcss.com">
+  </script>
+ </head>
+ <body class="flex items-center justify-center min-h-screen bg-white">
+  <img alt="A cute cartoon bear sitting with a happy expression, drawn in black and white line art style. The bear has round ears, a small nose, and big eyes, with its paws visible at the bottom." height="600" src="https://storage.googleapis.com/a1aa/image/8ueMDshQlGzcMi0enlD40GrybesI8JwVzfvVmPwzXb6951qOB.jpg" width="600"/>
+ </body>
 </html>
