--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <html>
- <head>
-  <title>
-   Bear Drawing
-  </title>
-  <script src="https://cdn.tailwindcss.com">
-  </script>
- </head>
- <body class="flex items-center justify-center min-h-screen bg-white">
-  <img alt="A cute cartoon bear sitting with a happy expression, drawn in black and white line art style. The bear has round ears, a small nose, and big eyes, with its paws visible at the bottom." height="600" src="https://storage.googleapis.com/a1aa/image/8ueMDshQlGzcMi0enlD40GrybesI8JwVzfvVmPwzXb6951qOB.jpg" width="600"/>
- </body>
+<head>
+    <title>Bear Drawing</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+</head>
+<body class="flex items-center justify-center min-h-screen bg-white">
+    <div class="max-w-xs sm:max-w-sm md:max-w-md lg:max-w-lg xl:max-w-xl">
+        <img class="w-full h-auto" src="https://storage.googleapis.com/a1aa/image/8ueMDshQlGzcMi0enlD40GrybesI8JwVzfvVmPwzXb6951qOB.jpg" alt="A cute cartoon bear sitting with a happy expression, drawn in black and white line art style. The bear has round ears, a small nose, and big eyes, with its paws visible at the bottom.">
+    </div>
+</body>
 </html>
