--- a/index.html
+++ b/index.html
@@ -1,22 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="images/gift.png" type="image/x-icon">
-  <link rel="stylesheet" href="css/style.css">
-
-  <!-- Document Title -->
-  <title>FLOWERS</title>
-</head>
-
-<body class="not-loaded">
-  <!-- Background -->
+<div class="container not-loaded">
   <div class="night"></div>
-
-  <!-- Flower -->
   <div class="flowers">
     <div class="flower flower--1">
       <div class="flower__leafs flower__leafs--1">
@@ -313,12 +296,4 @@
       </div>
     </div>
   </div>
-
-  <!-- Title -->
-  <h1 class="title"><span id="title"></span></h1>
-</body>
-
-</html>
-
-<!-- Import Javascript -->
-<script src="js/main.js"></script>
+</div>
