--- a/index.html
+++ b/index.html
@@ -1,13 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Heart Animation</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Dino Kuning Joget</title>
+    <style>
+        body {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            background: linear-gradient(135deg, #ffeb3b, #ffe082);
+            font-family: Arial, sans-serif;
+        }
+        h1 {
+            margin-bottom: 20px;
+            color: #444;
+        }
+        video {
+            border: 5px solid #fbc02d;
+            border-radius: 15px;
+            box-shadow: 0px 0px 20px rgba(0,0,0,0.3);
+        }
+    </style>
 </head>
 <body>
-    <canvas id="pinkboard"></canvas>
-    <script src="script.js"></script>
+
+    <h1>Dino Kuning Joget!</h1>
+
+    <video width="360" height="640" controls autoplay>
+        <source src="ssstik.io_1745861549225.mp4" type="video/mp4">
+        Browser kamu tidak mendukung video ini.
+    </video>
+
 </body>
 </html>
