--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dino Kuning Joget</title>
+    <title></title>
     <style>
         body {
             display: flex;
@@ -28,7 +28,7 @@
 </head>
 <body>
 
-    <h1>Dino Kuning Joget!</h1>
+    <h1></h1>
 
     <video width="360" height="640" controls autoplay>
         <source src="ssstik.io_1745861549225.mp4" type="video/mp4">
