--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h1></h1>
 
     <video width="360" height="640" controls autoplay>
-        <source src="ssstik.io_1745861549225.mp4" type="video/mp4">
+        <source src="https://vt.tiktok.com/ZSh1HQK4o/" type="video/mp4">
         
     </video>
 
