--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="id">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale">
     <title></title>
     <style>
         body {
@@ -14,7 +14,7 @@
 
     <h1></h1>
 
-    <video width="360" height="640" controls autoplay>
+    <video width="" height="" controls autoplay>
         <source src="https://vt.tiktok.com/ZSh1HQK4o/" type="video/mp4">
         
     </video>
