--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <button onclick="appendToDisplay('1')">1</button>
             <button onclick="appendToDisplay('2')">2</button>
             <button onclick="appendToDisplay('3')">3</button>
-            <button onclick="calculate()">=</button>
-            <button onclick="clearDisplay()">C</button>
+            <button id="equals" onclick="calculate()">=</button>
+            <button id="clear" onclick="clearDisplay()">C</button>
             <button onclick="appendToDisplay('0')">0</button>
         </div>
     </div>
